Zope Changes

  This file contains change information for the current Zope release.
  Change information for previous versions of Zope can be found in the
  file HISTORY.txt.

  For information on future releases, see ROADMAP.txt.

  Some future release (Zope X3 3.1.0)

    New features

      - Implemented a generic user preferences system.

        * User preferences are combined in groups that are described by
          schemas.

        * One can create a tree of preference groups using Python's dot
          notation in the group ids.

        * Preference groups can be declared to act as categories, which is
          used by the UI to improve the organization of the preferences.

        * Using a default preference provider, the site administrator can
          customize the default settings of the preferences for a user on a
          site wide bases. Acquisition in multi-site pages is supported.

        * The preferences are very easily accessible in TALES via a traversal
          namespace::

            /++preferences++/zmi/folder/sortedby
     
        * Preferences are easily accessible in Python code::

           >>> prefs = IUserPreferences(context)

          where the context merely has to be an ``ILocation``.

        * Preferences can be easily edited using intuitive URLs::

            http://localhost:8080/++preferences++/zmi

        * Provided a demo that demonstrates how preferences can be used to
          select the user's skin.

      - Added virtual host support in xml and static tree. The tree will
        switch the root to the virtualhost base.

      - Change addMenuItem directive. Make use of class and menu attributes.
        This makes it possible to use the directive for own IAdding menu
        implementation. The addMenuItem directive supports now also the order
        layer, extra and icon attributes.

      - Added the HTTP request recorder, which lets you inspect raw HTTP