@@ -28,4 +28,18 @@
     name="index.html"
     />
 
+<view
+    for="zope.app.publication.http.IMethodNotAllowed"
+    factory="zope.app.http.exception.methodnotallowed.MethodNotAllowedView"
+    name="index.html"
+    type="zope.publisher.interfaces.http.IHTTPRequest"
+    permission="zope.Public"
+    />
+
+<defaultView
+    for="zope.app.publication.http.IMethodNotAllowed"
+    type="zope.publisher.interfaces.http.IHTTPRequest"
+    name="index.html"
+    />
+
 </configure>
