@@ -21,6 +21,7 @@ from zope.app.testing import functional
 def test_suite():
     return unittest.TestSuite((
         functional.FunctionalDocFileSuite('notfound.txt'),
+        functional.FunctionalDocFileSuite('methodnotallowed.txt'),
         ))
 
 if __name__ == '__main__':
